# vedio_sum

./: .cursorignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  video_summary_demo.py
config/: config.yaml
examples/: download_video.py  get_oss_url.py  get_response.py  oss_to_tingwu.py  upload_to_oss.py
src/: __init__.py
src/bilibili_downloader/: __init__.py  config.py  exceptions.py
src/bilibili_downloader/core/: __init__.py  downloader.py  models.py  processor.py  task_manager.py  utils.py
src/bilibili_downloader/services/: __init__.py  display_service.py  oss_service.py  pipeline_service.py  tingwu_service.py
tests/: conftest.py  test_core.py  test_oss.py  test_services.py
tests/test_core/: test_downloader.py
tests/test_services/: test_oss_service.py
